# FB_SONAR_Translator

./: README.md  pyproject.toml
fb_sonar_translator/: RemoveLnNos.py  Translator.py
fb_sonar_translator/1_RawExamples/: WikiML.txt  松山鏡ーThe_Mirror_of_MatsuyamaーCombined.txt  松山鏡ーThe_Mirror_of_Matsuyamaー日本語.txt
fb_sonar_translator/2_InputData/: WikiML.txt_Clean.txt  WikiML_eng_Latn_fra_Latn.txt  WikiML_eng_Latn_jpn_Jpan.txt
fb_sonar_translator/3_OutputData/: WikiML_eng_Latn_jpn_Jpan.txt_jpn_Jpan_eng_Latn.txt  松山鏡ーThe_Mirror_of_Matsuyamaー日本語_Clean.txt_jpn_Jpan_deu_Latn.txt  松山鏡ーThe_Mirror_of_Matsuyamaー日本語_Clean.txt_jpn_Jpan_eng_Latn.txt  松山鏡ーThe_Mirror_of_Matsuyamaー日本語_Clean.txt_jpn_Jpan_zho_Hans.txt
fb_sonar_translator/Examples/: 松山鏡ーThe_Mirror_of_Matsuyamaー英語.txt
fb_sonar_translator/InputData/: 松山鏡ーThe_Mirror_of_Matsuyamaー日本語_Clean.txt  松山鏡ーThe_Mirror_of_Matsuyamaー英語_Clean.txt
fb_sonar_translator/OutputData/: 松山鏡ーThe_Mirror_of_Matsuyamaー英語_Translated.txt
